cif/org.eclipse.escet.cif.tests/tests/datasynth/invalid6.cif.err
ERROR: Data-based supervisory controller synthesis failed due to unsatisfied preconditions:

  --------------------------------------------------
  (1/1) Failed to statically evaluate an expression.
  --------------------------------------------------
   * In automaton "p":
     - edge e do x := floor(sqrt(-1.0));
                                ^
